Use overflow:hidden to prevent scrollbars on Firefox

--- a/src/styles.css
+++ b/src/styles.css
@@ -123,7 +123,7 @@
   font-weight: normal;
   color: #eaeaea; /* gray 1 */
 
-  overflow: auto;
+  overflow: hidden;
   word-wrap: break-word;      /* old prop name; required by IE */
   overflow-wrap: break-word;  /* standard prop name */
 }
